@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020121008"
-#define public MagickPackageReleaseDate "snapshot-20121008"
+#define public MagickPackageVersionAddendum ".020121010"
+#define public MagickPackageReleaseDate "snapshot-20121010"
